--- a/sass/common.scss
+++ b/sass/common.scss
@@ -48,7 +48,7 @@ html,body{
                 border: 1px solid #f2f2f2;
                 border-top: 0;
                 padding: 0 5px;
-                display: none;
+                // display: none;
                 position: absolute;
             }   
             i{
