--- a/sass/common.scss
+++ b/sass/common.scss
@@ -21,12 +21,21 @@ html,body{
         font-size: 9px;
         a{
             margin-left: 4px;
+        }
+        a:hover{
+            text-decoration: underline;
+            color: red;
         }    
+    }
+    >a:hover{
+        text-decoration: underline;
+        color: red;
     }
     a{
         font-size: 12px;
         color: #999999;
         margin-left: 20px;
+        
     }
     span{
         margin-left: 20px;
@@ -48,7 +57,7 @@ html,body{
                 border: 1px solid #f2f2f2;
                 border-top: 0;
                 padding: 0 5px;
-                // display: none;
+                display: none;
                 position: absolute;
             }   
             i{
@@ -71,6 +80,10 @@ html,body{
                 display: block;
                 background: #fff;
             }
+            >a{
+                text-decoration: underline;
+                color: red;
+            }
         }
         span{
             position: relative;
@@ -84,15 +97,12 @@ html,body{
             left: 160px;
         }
         .sbox3{
-            right: 9px;
             z-index: 10;
-            div{
-                border-bottom: 1px dotted #646161;
-                padding: 0 7px;
-                line-height: 24px;
-                margin-bottom: 6px;
-                right: 29px;
-            }
+            border-bottom: 1px dotted #646161;
+            padding: 0 7px;
+            line-height: 24px;
+            margin-bottom: 6px;
+            right: 29px;
             h2{
                 font-size: 14px;
                 color: #646161;
@@ -103,5 +113,77 @@ html,body{
             }
             
         }
+    }
+}
+#footer{
+    height: 384px;
+    color: #fff;
+    overflow: hidden;
+    background: -webkit-linear-gradient(left,#7a45e5,#b23cef);
+    a{
+        font-size: 12px;
+        color: #c0a6f2;
+    }
+    #ft-left{
+        margin-left: 88px;
+        float: left;
+        h1{
+            font-size: 38px; 
+            line-height: 77px;
+            margin-top: 15px;
+        }
+        span{
+            font-size: 12px;
+            line-height: 34px;
+        }
+        p{
+            font-size: 18px;
+            line-height: 42px;
+            color: #fff;
+            a{
+                font-size: 14px;
+                color: #fff;
+                margin-left: 8px;
+            }
+        }
+    }
+    #ft-center{
+        width: 104px;
+        font-size: 12px;
+        text-align: center;
+        float: left;
+        margin: 40px 0 0 45px;
+        line-height: 27px;
+        p{
+            color: #fff;
+        }
+    }
+    #ft-right{
+        float: right;
+        padding-top: 40px;
+        dl{
+            float: left;
+            margin-right: 83px;
+        }
+        dt{
+            font-size: 18px;
+            margin-bottom: 12px;
+        }
+        dd a{
+            line-height: 22px;
+        }
+        a:hover{
+            text-decoration: underline;
+        }
+    }
+    .copyright{
+        width: 1190px;
+        float: left;
+        font-size: 12px;
+        color: #c0a6f2;
+        border-top: 1px solid #fff;
+        margin: 13px 0 0 88px;
+        padding-top: 8px;
+        line-height: 23px;
     }
 }
