--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,3 +1,153 @@
-h1{
-    width: 122px;
+#header{
+    height: 120px;
+    padding: 0 190px;
+    background: #fff;
+    i{
+        letter-spacing: 12px;
+    }
+    .logo{
+        display: block;
+        width: 109px;
+        height: 40px;
+        text-indent: -99999px;
+        background: url(../img/logo.png) no-repeat;
+        margin: 40px 32px 0 0 ;
+        float: left;
+    }
+    >div{
+        float: left;
+        line-height: 120px;
+    }
+    form{
+        float: right;
+        input:nth-child(1){
+            width: 339px;
+            height: 30px;
+            border: 3px solid #7a45e5;
+            margin-top: 45px;
+            font-size: 12px;
+            color: #666;
+            padding-left: 8px;
+        }
+        input:nth-child(2){
+            width: 87px;
+            height: 36px;
+            border: 0;
+            background: -webkit-linear-gradient(left,#7a45e5,#b23cef);
+            font-size: 16px;
+            color: #fff;
+            position: relative;
+            top: 2px;
+        }
+    }
+}
+#nav{
+    background: #fff;
+    border-bottom: 1px solid #7a45e5;
+    .nav{
+        height: 37px;
+        line-height: 37px;
+        a{
+            color: #000;
+        }
+        ul li:first-child{
+            color: #fff;
+            width: 160px;
+            margin-right: 26px;
+            background: -webkit-linear-gradient(left,#7a45e5,#b23cef);
+        }
+        ul li{
+            float: left;
+            color: #7a45e5;
+            padding: 0 20px;
+        }
+        ul li:hover a{
+            color: #7a45e5;
+        }
+        .nav-right{
+            float: right;
+            margin-right: 40px;
+        }
+        .nav-right:hover{
+            text-decoration: underline;
+        }
+    }
+}
+.banner{
+    .b-left{
+        width: 200px;
+        height: 420px;
+        background: #333;
+        float: left;
+        color: #545454;
+        position: relative;
+        >li{
+            height: 84px;
+            padding: 0 20px;
+            div:nth-child(1){
+                height: 83px;
+                border-bottom: 1px dotted #545454;
+            }
+        }
+        >li:hover{
+            background: #7a45e5;
+        }
+        >li:hover .li-box{
+            display: block;
+        }
+        p{
+            color: #fff;
+            font-size: 14px;
+            i{
+                font-size: 23px;
+                font-weight: 100;
+                line-height: 49px;
+                margin-right: 15px;
+                color: #cacaca;
+            }
+        }
+        a{
+            font-size: 12PX;
+            color: #fff;
+        }
+        .li-box{
+            position: absolute;
+            left: 200px;
+            top: 0;
+            width: 655px;
+            background: #fff;
+            padding: 0 30px;
+            font-size: 12px;
+            z-index: 10;
+            display: none;
+            ul{ 
+                li{
+                    float: left;
+                    width: 313px;
+                    margin-top: 34px;
+                }
+                li:nth-child(odd){
+                    margin-right: 26px;
+                }
+                li:last-child{
+                    margin-bottom: 34px;
+                }
+            }
+            p{
+                color: #000;
+                line-height: 12px;
+                padding-bottom: 11px;
+                margin-bottom: 14px;
+                border-bottom: 1px solid #000;
+            }
+            a{
+                line-height: 25px;
+                color: #666;
+            }
+            a:hover{
+                color: red;
+                text-decoration: underline;
+            }
+        }    
+    }
 }
