--- a/sass/index.scss
+++ b/sass/index.scss
@@ -150,4 +150,35 @@
             }
         }    
     }
+    #banner-box{
+        width: 750px;
+        height: 420px;
+        float: left;
+        img{
+            width: 750px;
+        }
+        .swiper-container{
+            --swiper-theme-color: #fff;/* 设置Swiper风格 */
+            --swiper-navigation-color: #fff;/* 单独设置按钮颜色 */
+            --swiper-navigation-size: 26px;/* 设置按钮大小 */
+            .hide{
+                opacity:0;
+            }
+            .swiper-button-next,.swiper-button-prev{
+                transition:opacity 0.5s;
+            }
+        }
+        #next1,#prev1{
+            width: 34px;
+            height: 68px;
+            background: #000;
+            opacity: 0.3;
+        }
+        #next1{
+            right: 0;
+        }
+        #prev1{
+            left: 0;
+        }
+    }
 }
